src/css/seed.less
@import "base";

.constrained {
  max-width: 1200px;
  margin: auto;
  padding: 0 15px;
}

.content.container {
  display: flex;
  justify-content: center;

  .app {
    padding: 0 15px;
  }

  aside.sidebar {
    flex: 0 0 340px;
    padding: 0 20px;

    @media (max-width: 1200px) {
      display: none;
    }
  }
}

@import "navbar";
@import "about-box";
@import "ads";
@import "footer";
@import "state-results";

